--- a/assignment2.html
+++ b/assignment2.html
@@ -4,99 +4,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>assignment2</title>
+
+    <style>
+        .next {
+            text-decoration: none;
+            padding: 10px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+        }
+    </style>
+
 </head>
-
-<style>
-    button {
-        padding: 10px;
-        background: blueviolet;
-        width: 150px;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
 
 <body>
 
-    <img src="img/smallbusiness.jpg" alt="" width="80%">
+    <img src="img/smallbusiness.jpg" alt="" width="800">
     <p>Our range of business suites everyone, from <br>
         <b>small and medium business to big cooperates</b>
     </p>
+
     <ol>
+
         <li>
             <h4>Web/Mobile Application development</h4>
+            <ul>
+                <li>Wheather you need a simple static business website or a massive</li>
+                <li>customised web application/portal/e-commerce system/business mobile</li>
+                <li>app. Valuemax is here to give you the best at pocket for friendly price.</li>
+            </ul>
         </li>
-
-        <ul>
-            <li>Wheather you need a simple static business website or a massive</li>
-            <li>customised web application/portal/e-commerce system/business mobile</li>
-            <li>app. Valuemax is here to give you the best at pocket for friendly price.</li>
-        </ul>
 
         <li>
             <h4>Website Domain and Hosting Services</h4>
+            <ul>
+                <li>As web agency, we believe nothing but blazing fast-loading website,</li>
+                <li>blog, and web application. And that is exact experience we promise you</li>
+                <li>when you host with us at Valuemax.</li>
+            </ul>
         </li>
-
-        <ul>
-            <li>As web agency, we believe nothing but blazing fast-loading website,</li>
-            <li>blog, and web application. And that is exact experience we promise you</li>
-            <li>when you host with us at Valuemax.</li>
-        </ul>
 
         <li>
             <h4>Digital Marketing & Branding</h4>
+            <ul>
+                <li>We exercise a unique online marketing strategy that provide innovative,</li>
+                <li>creative solutions for emerging brands and well-establish companies.</li>
+                <li>We specialize in helping bith business-to-consumer and business-to-</li>
+                <li>business clients gain attention</li>
+            </ul>
         </li>
-
-        <ul>
-            <li>We exercise a unique online marketing strategy that provide innovative,</li>
-            <li>creative solutions for emerging brands and well-establish companies.</li>
-            <li>We specialize in helping bith business-to-consumer and business-to-</li>
-            <li>business clients gain attention</li>
-        </ul>
 
         <li>
             <h4>Training & Job Placement</h4>
+            <p>Get 100% pratical experience! We offer training that personalized to <br>
+                suit your learning style, Valuemax is here to suggest the best course <br>
+                which suits and promotes your career.
+            </p>
         </li>
-        <p>Get 100% pratical experience! We offer training that personalized to <br>
-            suit your learning style, Valuemax is here to suggest the best course <br>
-            which suits and promotes your career.
-        </p>
 
         <li>
             <h4>Graphics Design and Branding</h4>
+            <ul>
+                <li>We offer a completion of graphics design services to showcase</li>
+                <li>your identity. Working with our talented designers who ably translate</li>
+                <li>your thoughts and ideas into creative graphic desings.</li>
+            </ul>
         </li>
-
-        <ul>
-            <li>We offer a completion of graphics design services to showcase</li>
-            <li>your identity. Working with our talented designers who ably translate</li>
-            <li>your thoughts and ideas into creative graphic desings.</li>
-        </ul>
 
         <li>
             <h4>Online Services</h4>
+            <ul>
+                <li>We provide a variety of online services ranging from registrations,</li>
+                <li>payments of electricity bills, DSTV, GOTV & STARTIMES subscription and</li>
+                <li>every other internet engagement service.</li>
+            </ul>
         </li>
-        <ul>
-            <li>We provide a variety of online services ranging from registrations,</li>
-            <li>payments of electricity bills, DSTV, GOTV & STARTIMES subscription and</li>
-            <li>every other internet engagement service.</li>
-        </ul>
-
-        <p>
-            <img src="img/getty.jpg" alt="getty" width="80%">
-        </p>
 
     </ol>
 
+    <br><br>
+
+    <img src="img/getty.jpg" alt="getty" width="800">
+
+    <br><br>
+
     <center>
-        <button>
-            <a href="tabledesign.html">TABLE DESIGN</a>
-        </button>
+        <a href="tabledesign.html" class="next">TABLE DESIGN</a>
     </center>
 
 </body>
