--- a/exercise.html
+++ b/exercise.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>
-        Hire Me!
-    </title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hire Me</title>
     <link rel="icon" href="img/Valumax Logo.jpg">
+
     <style>
         ul {
             color: blue;
@@ -13,16 +14,13 @@
             width: 30%;
         }
 
-        button {
-            padding: 10px;
-            width: 200px;
-            outline: none;
-            border-radius: 5px;
-            border: none;
-        }
-
         a {
             text-decoration: none;
+            padding: 5px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 200px;
         }
     </style>
 </head>
@@ -48,7 +46,7 @@
     </ul>
 
     <p>And I also know XHTML</p>
-    <iframe src="https://www.youtube.com/watch?v=l1YM5msKYo8" frameborder="0"></iframe>
+    <iframe src="https://www.youtube.com/watch?v=l1YM5msKYo8" frameborder="2"></iframe>
 
     <h2>Previous Work Experience</h2>
 
@@ -61,15 +59,14 @@
     </ul>
     <hr>
 
-    <center>
-        <a href="class3.html"><button>Class Work Done</button></a>
-        <br><br>
-        <a href="class3workdone.html"><button>Class Assignment Done</button></a>
-    </center>
+    <a href="class3.html">Class Work Done</a>
+    <br><br>
+    <a href="class3workdone.html">Class Assignment Done</a>
 
     <!-- <img src="img/Screenshot 2023-10-29 123917.png" alt="screen" width="50%"> -->
 
     <!-- <a href="index.html"><img src="img/Screenshot 2023-10-29 123917.png" alt="screen" width="40%"></a> -->
+
 </body>
 
 </html>
