--- a/index.html
+++ b/index.html
@@ -11,35 +11,40 @@
 
 <body>
     <center>
-        <img src="img/Whogohost/whogohost.png" alt="whologo" width="200px">
+        <img src="img/Whogohost/whogohost.png" alt="1" width="200" style="margin-top: 20px;">
         <br><br>
-        <form action="">
+        <form>
+
             <h2>Secure Client Login</h2>
 
-            <label for="email" class="email">Email Address</label><br>
-            <input type="text" id="email1" autofocus required placeholder="Enter email"><br><br>
+            <label for="email" class="top">Email Address</label><br>
+            <input type="text" id="email" placeholder="Enter email" required><br><br>
 
-            <label class="pass">Password</label>
+            <label for="pass" style="margin-right: 205px;">Password</label>
             <label class="forgot"><a href="#">Forgot?</a></label>
-            <input type="text" id="pass1" placeholder="Password" required autofocus><br><br>
+            <input type="text" id="pass" placeholder="Password" required><br><br>
 
-            <input type="checkbox">
-            <label for="remember" style="margin-right: 160px;">Remember Me</label><br><br>
+            <input type="checkbox" id="remember">
+            <label style="margin-right: 150px;">Remember Me</label><br><br>
 
-            <button type="login" class="login">Login</button><br><br>
+            <button type="button" class="in">Login</button><br><br>
             <hr>
-            <label for="or">or</label>
+
+            <label>or</label>
             <br><br>
-            <button type="" class="withface">Sign in with Facebook</button><br><br>
+
+            <button type="button" class="fcb">Sign in with Facebook</button><br><br>
             <hr>
-            <label for="newact">Not a member yet?</label>
-            <label for="create" class="create"><a href="#">Create a New Account</a></label>
+
+            <label>Not a member yet?</label>
+            <label><a href="#">Create a New Account</a></label>
 
         </form>
         <br><br>
-        <button class="nextpage"><a href="assignment.html">NEXT PAGE</a></button>
-    </center>
 
+        <a href="assignment.html" class=link>NEXT PAGE</a>
+
+    </center>
 
 </body>
 
