--- a/tabledesign.html
+++ b/tabledesign.html
@@ -4,41 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tabbledesign</title>
+
+    <style>
+        table {
+            border: 2px, black;
+            border-collapse: collapse;
+        }
+    
+        a {
+            text-decoration: none;
+            padding: 10px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+        }
+    </style>
+
 </head>
-
-<style>
-    table {
-        border: 2px, solid black;
-        border-collapse: collapse;
-    }
-
-    button {
-        padding: 10px;
-        background: blueviolet;
-        width: 150px;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
 
 <body>
     <table border="2" cellpadding="20">
 
         <tr>
-            <td><b>Text</b></td>
-            <td><b>Text</b></td>
-            <td colspan="2"><b>
+            <th>Text</th>
+            <th>Text</th>
+            <th colspan="2">
                     <center>Text</center>
-                </b></td>
-            <td colspan="2"><b>
+            </th>
+            <th colspan="2">
                     <center>Text</center>
-                </b></td>
+            </th>
         </tr>
 
         <tr>
@@ -75,9 +71,7 @@
     </table><br><br>
 
     <center>
-        <button>
             <a href="tabledesign1.html">TABLE DESIGN</a>
-        </button>
     </center>
 
 </body>
