--- a/tabledesign2.html
+++ b/tabledesign2.html
@@ -5,66 +5,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        a {
+            text-decoration: none;
+            padding: 10px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 50px;
+        }
+    </style>
+
 </head>
 
-<style>
-    button {
-        padding: 10px;
-        background: blueviolet;
-        width: 150px;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
-
 <body>
+
     <table border="2" cellpadding="10">
+
         <tr>
-            <td colspan="3"><b>Title goes here</b></td>
-            <td><b>A</b></td>
-            <td><b>B</b></td>
+            <th colspan="3">Title goes here</th>
+            <th>A</th>
+            <th>B</th>
         </tr>
 
         <tr>
-            <td rowspan="3"><b>C</b></td>
-            <td><b>D</b></td>
-            <td><b>E</b></td>
-            <td><b>F</b></td>
-            <td><b>G</b></td>
+            <th rowspan="3">C</th>
+            <th>D</th>
+            <th>E</th>
+            <th>F</th>
+            <th>G</th>
         </tr>
 
         <tr>
-            <td><b>H</b></td>
-            <td colspan="2"><b>
-                    <center>I</center>
-                </b></td>
-            <td rowspan="2"><b>J</b></td>
+            <th>H</th>
+            <th colspan="2">I</th>
+            <th rowspan="2">J</th>
         </tr>
 
         <tr>
-            <td><b>K</b></td>
-            <td><b>L</b></td>
-            <td><b>M</b></td>
+            <th>K</th>
+            <th>L</th>
+            <th>M</th>
         </tr>
 
         <tr>
-            <td><b>N</b></td>
-            <td colspan="4"><b>
-                    <center>O</center>
-                </b></td>
+            <th>N</th>
+            <th colspan="4">O</th>
         </tr>
+
     </table>
+
     <br><br>
-    <center>
-        <button>
-            <a href="formclass.html">FORM CLASS1</a>
-        </button>
-    </center>
+
+    <a href="formclass.html">FORM CLASS1</a>
+
 
 </body>
 
