--- a/class3workdone.html
+++ b/class3workdone.html
@@ -5,73 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table {
+            border: 2px, solid black;
+            border-collapse: collapse;
+        }
+
+        .next {
+            text-decoration: none;
+            padding: 5px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 100px;
+        }
+    </style>
+
 </head>
-<style>
-    table {
-        border: 2px, solid black;
-        border-collapse: collapse;
-    }
 
-    button {
-        padding: 10px;
-        width: 200px;
-        outline: none;
-        border-radius: 5px;
-        border: none;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
 
 <body>
 
     <h1><img src="img/Valumax Logo.jpg" alt="logo1" height="50" width="50"><a href="#"><i>VALUEMAX</i></a></h1>
 
     <ul>
+        <li><a href="#"><i>Home</i></a></li>
+
+
         <li>
-            <a href="#"><i>Home</i></a>
+            <a href="#"><i>About Us</i></a>
+
+            <ol>
+                <li>Our Location</li>
+                <li>Our Mission</li>
+                <li>What we do</li>
+            </ol>
+
         </li>
 
-        <p>
-            <li>
-                <a href="#"><i>About Us</i></a>
-            </li>
-        </p>
-        <ol>
-            <li>Our Location</li>
-            <li>Our Mission</li>
-            <li>What we do</li>
-        </ol>
+        <li><a href="#"><i>Contact Us</i></a></li>
 
-        <p>
-            <li>
-                <a href="#"><i>Contact Us</i></a>
-            </li>
-        </p>
     </ul>
 
-    <img src="img/Valumax Logo2.jpg" alt="logo2" height="200" width="100%">
+    <img src="img/Valumax Logo2.jpg" alt="logo2" height="200" width="355">
 
     <table border="2" cellpadding="6">
 
         <tr>
-            <th colspan="7"><i><b>
-                        <center>Time-Table</center>
-                    </b></i></th>
+            <th colspan="6"><i>Time-Table</i></th>
         </tr>
 
         <tr>
-            <td rowspan="9"><i><b>Hours</b></i></td>
-        </tr>
-
-        <tr>
-            <td><i><b>Mon</b></i></td>
-            <td><i><b>Tues</b></i></td>
-            <td><i><b>Weds</b></i></td>
-            <td><i><b>Thur</b></i></td>
-            <td><i><b>Fri</b></i></td>
+            <th rowspan="8"><i>Hours</i></th>
+            <th><i>Mon</i></th>
+            <th><i>Tues</i></th>
+            <th><i>Weds</i></th>
+            <th><i>Thur</i></th>
+            <th><i>Fri</i></th>
         </tr>
 
         <tr>
@@ -91,11 +82,7 @@
         </tr>
 
         <tr>
-            <td colspan="6">
-                <b><i>
-                        <center>Launch</center>
-                    </i></b>
-            </td>
+            <th colspan="5"><i>Launch</i></th>
         </tr>
 
         <tr>
@@ -107,11 +94,7 @@
         </tr>
 
         <tr>
-            <td colspan="6">
-                <b><i>
-                        <center>Break</center>
-                    </i></b>
-            </td>
+            <th colspan="5"><i>Break</i></th>
         </tr>
 
         <tr>
@@ -129,11 +112,12 @@
             <td><i>Social</i></td>
         </tr>
 
-    </table><br><br>
+    </table>
 
-    <center>
-        <button><a href="infoform.html">Proceed to Info Form</a></button>
-    </center>
+    <br><br>
+
+    <a href="infoform.html" class="next">Proceed to Info Form</a>
+
 </body>
 
 </html>
