--- a/formclass.html
+++ b/formclass.html
@@ -5,37 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Table Class</title>
-</head>
-<style>
-    .submit {
-        background-color: black;
-        color: greenyellow;
-        border: none;
-        border-radius: 15px;
-        width: 150px;
-        padding: 5px;
-    }
 
-    .nextpage {
-        padding: 10px;
-        background: blueviolet;
-        width: 200px;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-    a {
-        text-decoration: none;
-    }
-    .clickhere {
-        background-color: gold;
-        color: black;
-        border: none;
-        border-radius: 15px;
-        width: 150px;
-        padding: 5px;
-    }
-</style>
+    <style>
+        .submit {
+            background-color: black;
+            color: greenyellow;
+            border: none;
+            border-radius: 15px;
+            width: 150px;
+            padding: 5px;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 10px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 150px;
+        }
+
+        .clickhere {
+            background-color: gold;
+            color: black;
+            border: none;
+            border-radius: 15px;
+            width: 150px;
+            padding: 5px;
+        }
+    </style>
+
+</head>
 
 <body>
 
@@ -45,59 +45,62 @@
 
 
     <form>
+
         <fieldset style="width: 30%; background: azure; text-align: center; margin-left: 100px;">
+
             <legend>
                 <h3>Personal Information</h3>
             </legend>
 
             <label for="name"><b>First Name:</b></label>
-            <input type="text" Id="" placeholder="First Name" autofocus required><br><br>
+            <input type="text" Id="name" placeholder="First Name" required><br><br>
 
-            <label for="name"><b>Second Name:</b></label>
-            <input type="text" Id="" placeholder="Second Name" autofocus required><br><br>
+            <label for="sname"><b>Second Name:</b></label>
+            <input type="text" Id="sname" placeholder="Second Name" required><br><br>
 
             <label for="number"><b>Phone Number:</b></label>
-            <input type="number" Id="" autofocus required><br><br>
+            <input type="number" Id="number" required><br><br>
 
             <!-- Gender  -->
 
             <label for="gender"><b>Gender:</b></label>
 
             <label for="female">Female</label>
-            <input type="radio" name="gender" autofocus required>
+            <input type="radio" name="gender" required>
 
             <label for="male">Male</label>
-            <input type="radio" name="gender" autofocus required><br><br>
+            <input type="radio" name="gender" required><br><br>
 
             <button type="button" class="clickhere">CLICK HERE</button><br><br>
 
-            <input type="checkbox" Id="">
-            <label for="remindme">Do yo accept to these terms and conditions?</label><br><br>
+            <input type="checkbox">
+            <label>Do yo accept to these terms and conditions?</label><br><br>
 
 
             <!-- To Create a Dropdown -->
 
-            <label for=""><b>Select your car:</b></label>
+            <label for="select"><b>Select your car:</b></label>
 
-            <select name="cars" id="select" autofocus required>
-                <option value="">Choose One</option>
-                <option value="">Mazda</option>
-                <option value="">Camry</option>
-                <option value="">Lexus</option>
-                <option value="">Toyota</option>
-                <option value="">Nissan</option>
+            <select name="cars" id="select">
+                <option value="chosose">Choose One</option>
+                <option value="mazda">Mazda</option>
+                <option value="camry">Camry</option>
+                <option value="lexus">Lexus</option>
+                <option value="toyota">Toyota</option>
+                <option value="nissan">Nissan</option>
             </select>
+
             <br><br>
 
             <input type="submit" value="SUBMIT" class="submit">
+
         </fieldset>
+
     </form>
+
     <br><br>
-    <center>
-        <button class="nextpage">
-            <a href="formclasswork1.html">FORM CLASS WORK</a>
-        </button>
-    </center>
+
+    <a href="formclasswork1.html">FORM CLASS WORK</a>
 
 </body>
 
