--- a/infoform.html
+++ b/infoform.html
@@ -5,70 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Important Information</title>
+
+    <style>
+        body {
+            background-color: rgb(58, 58, 182);
+        }
+
+        form {
+            width: 40%;
+            padding: 30px;
+            border-radius: 7px;
+            outline: none;
+            font-family: roboto, cambria, sans-serif;
+        }
+
+        fieldset {
+            border-radius: 7px;
+        }
+
+        /*  
+    .wide {
+        padding:6px;
+        width: 30%;
+        */
+
+        .floor {
+            padding: 6px;
+            width: 10%;
+        }
+
+        input {
+            padding: 6px;
+            border-radius: 7px;
+        }
+
+        select {
+            padding: 6px;
+            width: 25%;
+            border-radius: 7px;
+        }
+
+        label {
+            color: white;
+        }
+
+        button {
+            padding: 10px;
+            width: 117%;
+            border-radius: 7px;
+            color: rgb(53, 53, 166);
+            font-weight: 600;
+        }
+
+        textarea {
+            border-radius: 7px;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 5px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 250px;
+        }
+    </style>
+
 </head>
-<style>
-    body {
-        background-color: rgb(58, 58, 182);
-    }
 
-    form {
-        width: 40%;
-        padding: 30px;
-        border-radius: 7px;
-        outline: none;
-        font-family: roboto, cambria, sans-serif;
-    }
-
-    fieldset {
-        border-radius: 7px;
-    }
-
-    /*  
-.wide {
-    padding:6px;
-    width: 30%;
-    */
-
-    .floor {
-        padding: 6px;
-        width: 10%;
-    }
-
-    input {
-        padding: 6px;
-        border-radius: 7px;
-    }
-
-    select {
-        padding: 6px;
-        width: 25%;
-        border-radius: 7px;
-    }
-
-    label {
-        color: white;
-    }
-
-    button {
-        padding: 10px;
-        width: 117%;
-        border-radius: 7px;
-        color: rgb(53, 53, 166);
-        font-weight: 600;
-    }
-
-    textarea {
-        border-radius: 7px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
 
 <body>
 
-    <form action="">
+    <form>
 
         <fieldset>
 
@@ -76,13 +84,13 @@
                 <h3>Important Information</h3>
             </legend>
 
-            <select name="country" id="">
+            <select name="country" id="country">
                 <option value="country">Country</option>
-                <option value="">Nigeria</option>
-                <option value="">Zimbabwe</option>
-                <option value="">Ghana</option>
-                <option value="">USA</option>
-                <option value="">UAE</option>
+                <option value="nigeria">Nigeria</option>
+                <option value="zimbabwe">Zimbabwe</option>
+                <option value="ghana">Ghana</option>
+                <option value="usa">USA</option>
+                <option value="uae">UAE</option>
             </select>
 
             <input type="text" placeholder="Village">
@@ -95,29 +103,33 @@
             <input type="text" placeholder="Apt Nr" class="floor">
             <br><br>
 
-            <label for="">Door Color</label><br>
+            <label for="door">Door Color</label><br>
             <input type="text" style="background-color: rgb(185, 49, 126);">
             <input type="text" placeholder="Water Meter Nr">
 
-            <select name="" id="">
+            <select name="size" id="pant">
 
                 <option value="size">Aunt Panties Size</option>
-                <option value="">5</option>
-                <option value="">6</option>
-                <option value="">7</option>
-                <option value="">8</option>
-                <option value="">9</option>
+                <option value="size">5</option>
+                <option value="size">6</option>
+                <option value="size">7</option>
+                <option value="size">8</option>
+                <option value="size">9</option>
 
             </select><br><br>
 
             <label for="">More Personal Information</label><br>
-            <textarea name="" id="" cols="80" rows="4" placeholder="More About Yourself!!!"></textarea>
+            <textarea name="moreinfo" id="about" cols="80" rows="4" placeholder="More About Yourself!!!"></textarea>
 
         </fieldset><br><br>
 
-        <button>Register</button><br><br>
-        <button><a href="index.html">BACK TO HOMEPAGE</a></button>
+        <button>Register</button>
+
     </form>
+
+    <br><br>
+
+    <a href="index.html">BACK TO HOMEPAGE</a>
 
 </body>
 
