--- a/tabledesign1.html
+++ b/tabledesign1.html
@@ -5,181 +5,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        table {
+            border: 2px, solid black;
+            border-collapse: collapse;
+        }
+
+        a {
+            text-decoration: none;
+            padding: 10px;
+            background: green;
+            color: white;
+            border-radius: 5px;
+            margin-left: 300px;
+        }
+    </style>
+
 </head>
-<style>
-    table {
-        border: 2px, solid black;
-        border-collapse: collapse;
-    }
-
-    button {
-        padding: 10px;
-        background: blueviolet;
-        width: 150px;
-        border: none;
-        color: white;
-        border-radius: 5px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-</style>
 
 <body>
     <table border="2" cellpadding="10">
+
         <tr>
 
-            <td><b>
-                    <center>Day/Period</center>
-                </b></td>
-            <td><b>9:30-10:20</b></td>
-            <td><b>10:20-11:10</b></td>
-            <td><b>11:10-12:00</b></td>
-            <td><b>12:00-12:40</b></td>
-            <td><b>12:40-1:30</b></td>
-            <td><b>1:30-2:20</b></td>
-            <td><b>2:20-3:10</b></td>
-            <td><b>3:10-4:00</b></td>
+            <th>Day/Period</th>
+            <th>9:30-10:20</th>
+            <th>10:20-11:10</th>
+            <th>11:10-12:00</th>
+            <th>12:00-12:40</th>
+            <th>12:40-1:30</th>
+            <th>1:30-2:20</th>
+            <th>2:20-3:10</th>
+            <th>3:10-4:00</th>
 
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Monday</center>
-                </b></td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Maths</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td rowspan="6"><b>
-                    <center>LUNCH</center>
-                </b></td>
-            <td colspan="3">
-                <center>LAB</center>
-            </td>
-            <td>
-                <center>Phy</center>
-            </td>
+
+            <th>Monday</th>
+            <td>Eng</td>
+            <td>Maths</td>
+            <td>Che</td>
+            <td rowspan="6">LUNCH</td>
+            <td colspan="3">LAB</td>
+            <td>Phy</td>
+
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Tuesday</center>
-                </b></td>
-            <td colspan="3">
-                <center>LAB</center>
-            </td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td>
-                <center>Maths</center>
-            </td>
-            <td>
-                <center>SPORTS</center>
-            </td>
+
+            <th>Tuesday</th>
+            <td colspan="3">LAB</td>
+            <td>Eng</td>
+            <td>Che</td>
+            <td>Maths</td>
+            <td>SPORTS</td>
+
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Wednessday</center>
-                </b></td>
-            <td>
-                <center>Maths</center>
-            </td>
-            <td>
-                <center>Phy</center>
-            </td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td colspan="3">
-                <center>LIBRARY</center>
-            </td>
+
+            <th>Wednessday</th>
+            <td>Maths</td>
+            <td>Phy</td>
+            <td>Eng</td>
+            <td>Che</td>
+            <td colspan="3">LIBRARY</td>
+
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Thursday</center>
-                </b></td>
-            <td>
-                <center>Phy</center>
-            </td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td colspan="3">
-                <center>LAB</center>
-            </td>
-            <td>
-                <center>Maths</center>
-            </td>
+
+            <th>Thursday</th>
+            <td>Phy</td>
+            <td>Eng</td>
+            <td>Che</td>
+            <td colspan="3">LAB</td>
+            <td>Maths</td>
+
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Friday</center>
-                </b></td>
-            <td colspan="3">
-                <center>LAB</center>
-            </td>
-            <td>
-                <center>Maths</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Phy</center>
-            </td>
+
+            <th>Friday</th>
+            <td colspan="3">LAB</td>
+            <td>Maths</td>
+            <td>Che</td>
+            <td>Eng</td>
+            <td>Phy</td>
+
         </tr>
 
         <tr>
-            <td><b>
-                    <center>Saturday</center>
-                </b></td>
-            <td>
-                <center>Eng</center>
-            </td>
-            <td>
-                <center>Che</center>
-            </td>
-            <td>
-                <center>Maths</center>
-            </td>
-            <td colspan="3">
-                <center>SEMINAR</center>
-            </td>
-            <td>
-                <center>SPORTS</center>
-            </td>
+
+            <th>Saturday</th>
+            <td>Eng</td>
+            <td>Che</td>
+            <td>Maths</td>
+            <td colspan="3">SEMINAR</td>
+            <td>SPORTS</td>
+
         </tr>
 
-    </table><br>
+    </table>
 
-    <center>
-        <button>
-            <a href="tabledesign2.html">NEXT TABLE DESIGN</a>
-        </button>
-    </center>
+    <br><br>
+
+    <a href="tabledesign2.html">NEXT TABLE DESIGN</a>
+
 </body>
 
 </html>
